# tesths

./: ChangeLog.md  LICENSE  README.md  stack.yaml  tesths.cabal
src/: TestHS.hs
