name:           tesths
version:        0.1.0.0
description:    Please see the README on Github at <https://github.com/tosku/tesths#readme>
homepage:       https://github.com/tosku/tesths#readme
author:         Thodoris Papakonstantinou
maintainer:     mail@tpapak.com
copyright:      2018 Thodoris Papakonstantinou
license:        GPL-3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/tosku/tesths

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , ansi-terminal
  exposed-modules:
      TestHS
  default-language: Haskell2010
